--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,16 @@
         <div class ="row">
                 <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 aside">
                     <div class="column_content">
-                        <h2 class="contenttitle">About me</h2>
-                        <img id=myimage src="assets/images/me.jpg" style="float:left;width: 200px;height:200px;border:0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Vulputate dignissim suspendisse in est ante in nibh mauris cursus. Vitae congue eu consequat ac. Dignissim suspendisse in est ante in nibh mauris cursus. Dictum varius duis at consectetur. Vitae et leo duis ut diam quam. Ac ut consequat semper viverra nam libero justo laoreet sit. Aliquam sem fringilla ut morbi tincidunt augue interdum. Nam at lectus urna duis convallis. Tincidunt vitae semper quis lectus nulla at volutpat diam ut. Nulla pellentesque dignissim enim sit amet venenatis urna cursus.</p>
-                        <br><br>
-                        Facilisis volutpat est velit egestas dui id ornare arcu odio. Ligula ullamcorper malesuada proin libero nunc. Et egestas quis ipsum suspendisse ultrices gravida. Dapibus ultrices in iaculis nunc. Sed adipiscing diam donec adipiscing. Sem integer vitae justo eget. Sed tempus urna et pharetra pharetra massa. At urna condimentum mattis pellentesque id nibh tortor id aliquet. Diam sollicitudin tempor id eu nisl nunc mi. Etiam dignissim diam quis enim lobortis scelerisque fermentum. Senectus et netus et malesuada fames. Sit amet est placerat in egestas erat imperdiet. Nunc consequat interdum varius sit amet mattis vulputate.</p>                  
-            
+                        <h2 class="contenttitle">Contact</h2>
+                        <form>
+                        <p>First name:</p>
+                        <input type="text" name="firstname">
+                        <p>E-mail:</p>
+                        <input type="text" name="email">
+                        <p>Comments:</p>
+                        <input type="text" name="comments" class="comments">
+                        <input type="submit" value="Submit">
+                        </form>
                     </div>                                        
                 </div>
                 <div class = "col-xs-12 col-sm-12 col-md-5 col-lg-5">
